--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,37 @@
-name: Create Random YML
+name: Create Random YML File
 
 on:
-  workflow_dispatch: # You can trigger it manually
+  workflow_dispatch:
 
 jobs:
-  generate-file:
+  create-random-yml:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout the repository
       uses: actions/checkout@v4
 
-    - name: Generate random YML file
+    - name: Create a random YML file
       run: |
-        RANDOM_NAME=$(cat /dev/urandom | tr -dc 'a-z0-9' | fold -w 8 | head -n 1)
-        FILE_NAME=".github/workflows/${RANDOM_NAME}.yml"
-        echo "name: Random Workflow" > "$FILE_NAME"
-        echo "on: [push]" >> "$FILE_NAME"
-        echo "jobs:" >> "$FILE_NAME"
-        echo "  example:" >> "$FILE_NAME"
-        echo "    runs-on: ubuntu-latest" >> "$FILE_NAME"
-        echo "    steps:" >> "$FILE_NAME"
-        echo "      - run: echo Hello from random workflow!" >> "$FILE_NAME"
-        echo "Created $FILE_NAME"
-        
-    - name: Commit and push
+        mkdir -p .github/workflows
+        RANDOM_NAME=$(head /dev/urandom | tr -dc a-z0-9 | head -c 8)
+        FILE_PATH=".github/workflows/${RANDOM_NAME}.yml"
+        echo "name: Random Workflow" > "$FILE_PATH"
+        echo "on: [push]" >> "$FILE_PATH"
+        echo "jobs:" >> "$FILE_PATH"
+        echo "  say-hello:" >> "$FILE_PATH"
+        echo "    runs-on: ubuntu-latest" >> "$FILE_PATH"
+        echo "    steps:" >> "$FILE_PATH"
+        echo "      - run: echo 'Hello from $RANDOM_NAME workflow!'" >> "$FILE_PATH"
+        echo "Created $FILE_PATH"
+
+    - name: Commit and Push Changes
+      env:
+        TOKEN: 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
       run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
         git add .github/workflows/*.yml
         git commit -m "Add random workflow file"
-        git push
+        git remote set-url origin https://${TOKEN}@github.com/${{ github.repository }}
+        git push origin HEAD:main
