--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,1 @@
-name: Create Random YML File
-
-on:
-  workflow_dispatch:
-
-jobs:
-  create-random-yml:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout the repository
-      uses: actions/checkout@v4
-
-    - name: Create a random YML file
-      run: |
-        mkdir -p .github/workflows
-        RANDOM_NAME=$(head /dev/urandom | tr -dc a-z0-9 | head -c 8)
-        FILE_PATH=".github/workflows/${RANDOM_NAME}.yml"
-        echo "name: Random Workflow" > "$FILE_PATH"
-        echo "on: [push]" >> "$FILE_PATH"
-        echo "jobs:" >> "$FILE_PATH"
-        echo "  say-hello:" >> "$FILE_PATH"
-        echo "    runs-on: ubuntu-latest" >> "$FILE_PATH"
-        echo "    steps:" >> "$FILE_PATH"
-        echo "      - run: echo 'Hello from $RANDOM_NAME workflow!'" >> "$FILE_PATH"
-        echo "Created $FILE_PATH"
-
-    - name: Commit and Push Changes
-      env:
-        TOKEN: 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
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add .github/workflows/*.yml
-        git commit -m "Add random workflow file"
-        git remote set-url origin https://${TOKEN}@github.com/${{ github.repository }}
-        git push origin HEAD:main
+jje
